--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,10 @@ langchain-experimental==0.3.4
 langchain-groq==0.3.2
 langchain-huggingface==0.2.0
 langchain-text-splitters==0.3.8
+langgraph==0.5.0
+langgraph-checkpoint==2.1.0
+langgraph-prebuilt==0.5.1
+langgraph-sdk==0.1.72
 langsmith==0.3.42
 MarkupSafe==3.0.2
 marshmallow==3.26.1
@@ -65,6 +69,7 @@ nvidia-nccl-cu12==2.26.2
 nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu12==12.6.77
 orjson==3.10.18
+ormsgpack==1.10.0
 packaging==24.2
 pandas==2.2.3
 pillow==11.2.1
@@ -112,5 +117,6 @@ typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 watchdog==6.0.0
+xxhash==3.5.0
 yarl==1.20.0
 zstandard==0.23.0
